--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <div class="class">
   <h1>Shelby Trodden's Portfolio</h1>
     <img src="img/shelby.jpg">
-    <div class="column">
+    <div class="row">
       <h2>About Me</h2>
         <ul>
           <li>My background is in social work, which taught me how to problem solve under pressure, but now <a href="https://www.epicodus.com"> <strong>Epicodus</strong></a> has taught me the skills I need to make this career change into programming</li>
           <li>I grew up in the PNW but I now live in Texas, and wish I still lived in the PNW</li>
           <li>I have a big garden with many unique items but can't keep indoor plants alive</li>
-          <li>I have 2 dogs and <em>4 chickens</em></li>
+          <li>I have 2 dogs and <em>7 chickens</em></li>
           <li>I am working on buying a 30+ acre farm that will have cows, alpaca, sheep, chicken, and bees.</li>
           <li><span style="color: rgb(214, 180, 245)";> I cannot swim </span></li>
         </ul>  
     </div>
-    <div class="column">
+    <div class="row">
       <h2>Projects</h2>
     </div>
-    <div class="column">
+    <div class="row">
       <h2>Fun Facts</h2>
       <ul>
         <li>The unicorn is the national animal of Scotland.</li>
@@ -34,6 +34,7 @@
         <li>During her reign, Queen Victoria survived eight assassination attempts.</li>
         <li>Coyotes outpace roadrunners by 23 mph.</li>
       </ul>
+    </div>
     </div>
     </div>  
 </body>
