updated readme and added license. minor tweaks to html content and css styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     </div>
     <div class="row">
       <h2>Projects</h2>
+        <ol><a href="https://github.com/ShelbyTrodden/My-first-webpage2">My First Webpage</a>
+          <p>This is the first webpage I created. While it does not reflect my current level of skill, I like to see how far I have come. I used HTML and CSS</p>
+        </ol>
+        <ol><a href="https://github.com/ShelbyTrodden/pet-blog">Pet Blog</a>
+          <p>I love working on anything that involves animals, so this was a fun project to show off my pets. I used HTML and CSS</p>
+      </ol>
     </div>
     <div class="row">
       <h2>Fun Facts</h2>
