add text bos for fun facts and style link color with css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>I love working on anything that involves animals, so this was a fun project to show off my pets. I used HTML and CSS</p>
       </ol>
     </div>
-    <div class="row">
+    <blockquote>
       <h2>Fun Facts</h2>
       <ul>
         <li>The unicorn is the national animal of Scotland.</li>
@@ -40,7 +40,7 @@
         <li>During her reign, Queen Victoria survived eight assassination attempts.</li>
         <li>Coyotes outpace roadrunners by 23 mph.</li>
       </ul>
-    </div>
+    </blockquote>
     </div>
     </div>  
 </body>
